--- a/git-reveal.html
+++ b/git-reveal.html
@@ -26,7 +26,7 @@
   <script type="text/javascript", src="reveal.js/js/reveal.js"></script>
   <script type="text/javascript">
     Reveal.initialize({
-
+      history: true
     });
   </script>
 </html>
