--- a/git-reveal.html
+++ b/git-reveal.html
@@ -5,6 +5,7 @@
     <title>I know what I did last summer</title>
     <link rel="stylesheet" href="reveal.js/css/reveal.css">
     <link rel="stylesheet" href="reveal.js/css/theme/solarized.css">
+    <link rel="stylesheet" href="git.css">
   </head>
   <body>
     <div class="reveal">
@@ -16,6 +17,42 @@
 
           <p><small>Technical Seminar <date>2017-03-30</date></small></p>
           <p><small>Niklas Mähler</small></p>
+        </section>
+
+        <section>
+          <h2>Version control software</h2>
+          <ul>
+            <li>Initially created for software development</li>
+            <li>Some of the most used ones are</li>
+            <ul>
+              <li>Subversion (SVN)</li>
+              <li>Mercurial</li>
+              <li>Git</li>
+            </ul>
+          </ul>
+
+          <img class="plain stretch" src="https://upload.wikimedia.org/wikipedia/en/thumb/9/9f/Subversion_Logo.svg/1280px-Subversion_Logo.svg.png">
+          <img class="plain stretch" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/New_Mercurial_logo.svg/2000px-New_Mercurial_logo.svg.png">
+          <img class="plain stretch" src="https://git-scm.com/images/logos/downloads/Git-Logo-2Color.png">
+        </section>
+
+        <section>
+          <h2>Why do I use Git?</h2>
+
+          <ul>
+            <li>Helps me structure my work</li>
+            <li>Let's me screw up</li>
+            <li>Keep track of what's been done</li>
+            <li>Sharing and collaboration</li>
+          </ul>
+        </section>
+
+        <section>
+          <h2>More reading</h2>
+
+          <ul>
+            <li>Pro Git (<a href="https://git-scm.com/book/en/v2">https://git-scm.com/book/en/v2</a>)</li>
+          </ul>
         </section>
 
       </div>
