Add slides on my motivations

--- a/git-reveal.html
+++ b/git-reveal.html
@@ -48,6 +48,48 @@
         </section>
 
         <section>
+          <h2>How can Git help me structure my work?</h2>
+
+          <ul>
+            <li>Have to think before I write</li>
+            <li>Divide work into smaller chunks</li>
+            <li>Commit smaller, "self-contained" changes</li>
+          </ul>
+        </section>
+
+        <section>
+          <h2>How does Git let me screw up?</h2>
+        </section>
+
+        <section>
+          <h2>How Git keeps track of changes</h2>
+        </section>
+
+        <section>
+          <section>
+            <h2>Sharing and collaboration</h2>
+
+            <img class="plain stretch" src="http://www.phdcomics.com/comics/archive/phd101212s.gif">
+          </section>
+
+          <section>
+            <img width=400 class="plain" src="https://crossbrowsertesting.com/design/images/github-logo.png"><br>
+            <img width=400 class="plain" src="https://bitbucket-marketing-cdn.atlassian.com/dam/jcr:1437c132-1dbc-410d-b6a6-cb7fce8f2775/bitbucket_rgb_darkblue_atlassian_1200x630.png"><br>
+            <img width=400 class="plain" src="https://about.gitlab.com/images/press/logo/wm_no_bg.svg">
+          </section>
+
+          <section>
+            <h2>Many possibilities</h2>
+
+            <ul>
+              <li>Collaborate with anyone</li>
+              <li>Keep track of issues</li>
+              <li>Documentation/Wiki</li>
+            </ul>
+          </section>
+        </section>
+
+        <section>
           <h2>More reading</h2>
 
           <ul>
