Add some git history

--- a/git-reveal.html
+++ b/git-reveal.html
@@ -37,6 +37,28 @@
         </section>
 
         <section>
+          <section>
+            <h2>Some history</h2>
+
+            <p>Developed by Linus Torvalds in 2005</p>
+
+            <div>
+              <img width=200 style="margin: 0 100px 75px 0" src="https://git-scm.com/images/logos/downloads/Git-Logo-2Color.png" class="plain">
+              <img height=200 class="plain" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Linus_Torvalds.jpeg/440px-Linus_Torvalds.jpeg">
+            </div>
+          </section>
+
+          <section>
+            <img width=600 src="img/git_definition.png">
+
+            <blockquote cite="https://en.wikipedia.org/wiki/Git">
+              <p>I'm an egotistical bastard, and I name all my projects after myself. First 'Linux', now 'git'.</p>
+              <p>&mdash; Linus Torvalds</p>
+            </blockquote>
+          </section>
+        </section>
+
+        <section>
           <h2>Why do I use Git?</h2>
 
           <ul>
