Add motivational example and purpose

--- a/git-reveal.html
+++ b/git-reveal.html
@@ -20,20 +20,64 @@
         </section>
 
         <section>
-          <h2>Version control software</h2>
-          <ul>
-            <li>Initially created for software development</li>
-            <li>Some of the most used ones are</li>
-            <ul>
-              <li>Subversion (SVN)</li>
-              <li>Mercurial</li>
-              <li>Git</li>
-            </ul>
-          </ul>
+          <section>
+            <img src="img/motivation1.png" class="plain stretch">
+          </section>
+          <section data-transition="none">
+            <img src="img/motivation2.png" class="plain stretch">
+          </section>
+          <section data-transition="none">
+            <img src="img/motivation3.png" class="plain stretch">
+          </section>
+          <section data-transition="none">
+            <img src="img/motivation4.png" class="plain stretch">
+          </section>
+          <section data-transition="none">
+            <img src="img/motivation5.png" class="plain stretch">
+          </section>
+          <section data-transition="none">
+            <img src="img/motivation6.png" class="plain stretch">
+          </section>
+          <section data-transition="none">
+            <img src="img/motivation7.png" class="plain stretch">
+          </section>
+          <section data-transition="none">
+            <img src="img/motivation8.png" class="plain stretch">
+          </section>
+          <section data-transition="none">
+            <img src="img/motivation9.png" class="plain stretch">
+          </section>
+          <section data-transition="none">
+            <img src="img/motivation10.png" class="plain stretch">
+          </section>
+        </section>
 
-          <img class="plain stretch" src="https://upload.wikimedia.org/wikipedia/en/thumb/9/9f/Subversion_Logo.svg/1280px-Subversion_Logo.svg.png">
-          <img class="plain stretch" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/New_Mercurial_logo.svg/2000px-New_Mercurial_logo.svg.png">
-          <img class="plain stretch" src="https://git-scm.com/images/logos/downloads/Git-Logo-2Color.png">
+        <section>
+          <section>
+            <h2>Version control software</h2>
+            <ul>
+              <li>Initially created for software development</li>
+              <li>Some of the most used ones are</li>
+              <ul>
+                <li>Subversion (SVN)</li>
+                <li>Mercurial</li>
+                <li>Git</li>
+              </ul>
+            </ul>
+
+            <img class="plain stretch" src="https://upload.wikimedia.org/wikipedia/en/thumb/9/9f/Subversion_Logo.svg/1280px-Subversion_Logo.svg.png">
+            <img class="plain stretch" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/New_Mercurial_logo.svg/2000px-New_Mercurial_logo.svg.png">
+            <img class="plain stretch" src="https://git-scm.com/images/logos/downloads/Git-Logo-2Color.png">
+          </section>
+
+          <section>
+            <h2>Purpose</h2>
+            <ul>
+              <li>Enable easier collaboration</li>
+              <li>Keep a history for a project</li>
+              <li>Backup (kind of)</li>
+            </ul>
+          </section>
         </section>
 
         <section>
