Add pros and cons

--- a/git-reveal.html
+++ b/git-reveal.html
@@ -78,6 +78,13 @@
               <li>Backup (kind of)</li>
             </ul>
           </section>
+
+          <section>
+            <ul>
+              <li>Good for plain text files such as source code</li>
+              <li>Less good for binary formats such as images or Word documents</li>
+            </ul>
+          </section>
         </section>
 
         <section>
