Remove stray commas

--- a/git-reveal.html
+++ b/git-reveal.html
@@ -174,8 +174,8 @@
     </div>
   </body>
 
-  <script type="text/javascript", src="reveal.js/lib/js/head.min.js"></script>
-  <script type="text/javascript", src="reveal.js/js/reveal.js"></script>
+  <script type="text/javascript" src="reveal.js/lib/js/head.min.js"></script>
+  <script type="text/javascript" src="reveal.js/js/reveal.js"></script>
   <script type="text/javascript">
     Reveal.initialize({
       history: true
