Add section on how git works

--- a/git-reveal.html
+++ b/git-reveal.html
@@ -110,6 +110,47 @@
         </section>
 
         <section>
+          <section>
+            <h2>How does Git work?</h2>
+          </section>
+
+          <section>
+            <ul>
+              <li>Command line tool</li>
+              <li>Various graphical user interfaces available</li>
+              <li class="fragment">I will focus on the command line tool</li>
+            </ul>
+
+            <aside class="notes">
+              The graphical user interfaces can be of great help, but they are of even greater help if you already understand the command line tool.
+            </aside>
+          </section>
+
+          <section>
+            <h2>Definitions</h2>
+
+            <dl>
+              <dt>Repository</dt>
+              <dd>Collection of files and their history</dd>
+              <dt>Workspace</dt>
+              <dd>Where the work is being done</dd>
+              <dt>Commit</dt>
+              <dd>A snapshot of the workspace</dd>
+            </dl>
+          </section>
+
+          <section>
+            <h2>Distributed</h2>
+
+            <ul>
+              <li>Every user has its own copy of the workspace</li>
+              <li>Almost everything is done locally</li>
+              <li>No internet connection needed</li>
+            </ul>
+          </section>
+        </section>
+
+        <section>
           <h2>Why do I use Git?</h2>
 
           <ul>
