Add slide on common commands

--- a/git-reveal.html
+++ b/git-reveal.html
@@ -148,6 +148,19 @@
               <li>No internet connection needed</li>
             </ul>
           </section>
+
+          <section>
+            <h2>Commands</h2>
+
+            <ul>
+              <li class="fragment"><code>git init</code>: initialise a repository</li>
+              <li class="fragment"><code>git status</code>: check the status of the repository</li>
+              <li class="fragment"><code>git add</code>: add changes (stage)</li>
+              <li class="fragment"><code>git commit</code>: commit the change to the repository</li>
+              <li class="fragment"><code>git push</code>: push changes to remote repository</li>
+              <li class="fragment"><code>git pull</code>: get changes from remote repository</li>
+            </ul>
+          </section>
         </section>
 
         <section>
