Screw up clarification

--- a/git-reveal.html
+++ b/git-reveal.html
@@ -225,6 +225,9 @@
 
         <section>
           <h2>How does Git let me screw up?</h2>
+
+          <p>The history allows me to go back in time</p>
+          <p class="fragment">... provided that I've been disciplined</p>
         </section>
 
         <section>
