Quick fix to make the canvas stick to the bottom

--- a/git-reveal.html
+++ b/git-reveal.html
@@ -176,9 +176,9 @@
               <li><code>git checkout</code>: move to commit or branch</li>
             </ul>
 
-            <!-- <img src="img/master.png" class="stretch plain" style="float: right">
-            <img src="img/master_branch.png" class="stretch plain fragment" style="float: right"> -->
-            <canvas id="branch-canvas" style="margin-top: 50px" width=600></canvas>
+            <div>
+              <canvas id="branch-canvas" style="margin-top: 50px"></canvas>
+            </div>
             <span class="fragment" id="branch-commit1"></span>
             <span class="fragment" id="branch-commit2"></span>
             <span class="fragment" id="branch-commit3"></span>
