Split commands slide and add more commands

--- a/git-reveal.html
+++ b/git-reveal.html
@@ -158,6 +158,15 @@
               <li class="fragment"><code>git status</code>: check the status of the repository</li>
               <li class="fragment"><code>git add</code>: add changes (stage)</li>
               <li class="fragment"><code>git commit</code>: commit the change to the repository</li>
+              <li class="fragment"><code>git log</code>: view history</li>
+            </ul>
+          </section>
+
+          <section>
+            <h2>More commands</h2>
+
+            <ul>
+              <li class="fragment"><code>git clone</code>: copy a repository</li>
               <li class="fragment"><code>git push</code>: push changes to remote repository</li>
               <li class="fragment"><code>git pull</code>: get changes from remote repository</li>
             </ul>
