--- a/git-reveal.html
+++ b/git-reveal.html
@@ -150,6 +150,42 @@
             </ul>
           </section>
 
+          <section data-transition="fade">
+            <img src="img/schematic1.png" class="stretch plain">
+
+            <aside class="notes">
+              Each commit has a unique ID
+            </aside>
+          </section>
+
+          <section data-transition="fade">
+            <img src="img/schematic2.png" class="stretch plain">
+          </section>
+
+          <section data-transition="fade">
+            <img src="img/schematic3.png" class="stretch plain">
+          </section>
+
+          <section data-transition="fade">
+            <img src="img/schematic4.png" class="stretch plain">
+          </section>
+
+          <section data-transition="fade">
+            <img src="img/schematic5.png" class="stretch plain">
+          </section>
+
+          <section data-transition="fade">
+            <img src="img/schematic6.png" class="stretch plain">
+          </section>
+
+          <section data-transition="fade">
+            <img src="img/schematic7.png" class="stretch plain">
+
+            <aside class="notes">
+              Not limited between client-server interactions, because there is not difference between the client and the server!
+            </aside>
+          </section>
+
           <section>
             <h2>Commands</h2>
 
