--- a/git-reveal.html
+++ b/git-reveal.html
@@ -255,6 +255,12 @@
         </section>
 
         <section>
+          <h2>This presentation is a Git repository!</h2>
+
+          <p><a href="https://github.com/maehler/git-presentation">https://github.com/maehler/git-presentation</a></p>
+        </section>
+
+        <section>
           <h2>More reading</h2>
 
           <ul>
