--- a/git-reveal.html
+++ b/git-reveal.html
@@ -313,6 +313,12 @@
           </ul>
         </section>
 
+        <section>
+          <h2>So what did I do last summer?</h2>
+
+          <p><a href="https://github.com/maehler?tab=overview&from=2016-06-06">Let's check it out</a></p>
+        </section>
+
       </div>
     </div>
   </body>
